对全书删除冗余，重新排版

--- a/di-10-zhang-xu-ni-hua/di-10.1.md
+++ b/di-10-zhang-xu-ni-hua/di-10.1.md
@@ -12,19 +12,19 @@ BVCP 是一款 Web 界面的 BHyve 管理软件。这个软件真的很好用，
 
 ## 安装 BVCP
 
-下载 BVCP：
+- 下载 BVCP：
 
 ```sh
 # fetch https://bhyve.npulse.net/release.tgz
 ```
 
-解压缩：
+- 解压缩：
 
 ```sh
 # tar -xzvf release.tgz
 ```
 
-安装：
+- 安装 BVCP：
 
 ```sh
 # cd bhyve-webadmin 
@@ -72,7 +72,7 @@ bvcp_enable:  -> YES
  N  2024-12-21 11:33:46 | BVCP | Initialising BVCP-Backend 2.1.4 Application
  N  2024-12-21 11:33:48 | BVCP | Starting Database ...
  (!) Admin Credentials recreated,
-   - User: admin # 用户名 admin
+   - User: admin 		# 用户名 admin
    - Password: AdJFjNjG # 密码 AdJFjNjG
 
  N  2024-12-21 11:33:48 | SW | Program exited gracefully...
