--- a/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -30,19 +30,25 @@
 10    1 0xffffffff83400000   33e438 vmm.ko
 ```
 
-首先，安装 UEFI 固件、VNC 与 vm-bhyve：
+---
+
+首先，安装 UEFI 固件、VNC 与 vm-bhyve。
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install bhyve-firmware vm-bhyve tigervnc-viewer
 ```
 
-或者：
+- 或者使用 Ports 安装：
 
 ```
 # cd /usr/ports/sysutils/bhyve-firmware/ && make install clean
 # cd /usr/ports/sysutils/vm-bhyve/ && make install clean
 # cd /usr/ports/net/tigervnc-viewer/ && make install clean
 ```
+
+---
 
 在 `/etc/rc.conf` 中指定启动 vm 与虚拟机的位置：
 
