--- a/di-11-zhang-ji-suan-ji-gai-lun/11.4-cao-zuo-xi-tong.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.4-cao-zuo-xi-tong.md
@@ -29,7 +29,6 @@
 
 ### 操作系统的定义
 
-**操作系统的定义如下：**
 
 操作系统是计算机系统中的一个系统软件，它是一些程序模块的集合：它们能有效地组织和管理计算机系统中的硬件以及软件资源，合理地组织计算机工作流程，控制程序的执行，并向用户提供各种服务功能，使用户能灵活、方便、高效地使用计算机，并使整个计算机系统能高效地运行。
 
@@ -39,7 +38,7 @@
 
 ### 操作系统的特征
 
-#### **并发性**
+#### 并发性
 
 并发行性是指操作计算机系统中同时存在若干个运行的程序，这些程序在同时向前推进。
 
@@ -47,7 +46,7 @@
 
 在单处理器环境下，这些同时运行着的程序是交替在处理器上运行的。在多处理器系统环境中，多个程序的并发特征，不仅在宏观上是并发的，而且在微观层面上，（即处理器层面）程序也是并发执行的。且在分布式系统中，多个计算机的并存，使得程序的并发特征得到了更加充分的体现，因为在每个计算机上都可以有程序执行，他们共同构造了程序并发执行的景象。
 
-#### **共享性**
+#### 共享性
 
 共享性是指操作系统与多个用户程序共用系统中的各种资源。这种共享性是在操作系统控制下实现的。资源的共享性主要针对计算机如下几项重要资源。
 
@@ -59,6 +58,6 @@
 
 **外部设备。** 外部设备是供所有的用户使用的，这些用户包括操作系统、系统用户 *（如管理员）* 和普通用户。操作系统必须对这些用户对外设的使用要求做出管理，使所有的外部设备能够按照一定的策略被所有用户所共享。
 
-#### **随机性**
+#### 随机性
 
  操作系统运行是一种随机环境下进行的。这种随机环境的含义是，操作系统不能对任何所运行程序的行为及硬件设备情况做出任何事先的假定，一个有可能在任何时候向 CPU 发出中断请求。用户提交的、运行着的程序要做什么事情也无法事先知道。一般来说操作系统正处于什么状态之中是无法确切知道的，但是，随机性并不意味着操作系统不能很好地控制资源的使用及程序的运行，随机性强调了在操作系统的设计与实现要充分考虑任何的可能性。
