--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -1,7 +1,6 @@
 # 第 12.5 节 Grub & UEFI 与 efibootmgr
 
 
-
 ## 判断当前系统使用 UEFI 与否
 
 - 如果是非 UEFI：
@@ -34,6 +33,7 @@ FreeBSD 默认的 EFI 是 fat16 的，本次重建后为 fat32?
 >
 >若在安装系统的时候，未选定 `gpt (UEFI)`，则 `gpart show` 会发现存在分区 `freebsd-boot  (512K)`。
 
+- 查看当前挂载情况：
 
 ```sh
 root@ykla:~ # mount
@@ -53,14 +53,14 @@ zroot/home/ykla on /home/ykla (zfs, local, noatime, nfsv4acls)
 zroot/var/tmp on /var/tmp (zfs, local, noatime, nosuid, nfsv4acls)
 ```
 
-检查文件系统
+- 检查文件系统
 
 ```
 root@ykla:/ # fstyp /dev/nvd0p1
 msdosfs
 ```
 
-调整大小看看：
+- 调整大小看看：
 
 ```sh
 root@ykla:~ # gpart show
@@ -107,6 +107,8 @@ root@ykla:~ # mount -t msdosfs /dev/nda0p1 /boot/efi
 root@ykla:~ # cd /boot/efi/
 root@ykla:/boot/efi # mkdir efi # 创建 fat32 分区中的 efi 文件夹
 ```
+
+### 故障排除与未竟事宜
 
 疑问：如何解决 `newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525` ？
 
@@ -160,9 +162,9 @@ BootOrder  : 0000, 0001, 0002, 0003
 
 现在假设有两块硬盘，两块硬盘上都分别有一个 EFI 分区，一个分区里是 FreeBSD，另一个是 Windows。
 
-现在只想保留一个 EFI 分区，即想把 EFI 配置文件放到一块硬盘的 EFI 分区里统一管理。
+现在只想保留一个 EFI 分区，即想把 2 个 EFI 配置文件放到一块硬盘的 EFI 分区里统一管理。
 
-设装有 Windows 的硬盘为 `ada0`，FreeBSD 的硬盘为 `nvd0`。本文是删掉了 nvd0，即 BSD 系统安装生成的 EFI  分区（不知道为什么 FreeBSD 的 EFI 文件系统是 Fat16）。将 FreeBSD 的引导文件放到了 ada0 硬盘下。
+设装有 Windows 的硬盘为 `ada0`，FreeBSD 的硬盘为 `nvd0`。本文是删掉了 nvd0，即 BSD 系统安装生成的 EFI 分区（不知道为什么 FreeBSD 的 EFI 文件系统是 Fat16）。将 FreeBSD 的引导文件放到了 `ada0` 硬盘下。
 
 首先关闭 Windows 的快速启动启动：命令为 `powercfg /h off`。（如果你进的去 BIOS 设置界面就不用关）
 
