--- a/di-13-zhang-freebsd-te-se/di-13.6-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
+++ b/di-13-zhang-freebsd-te-se/di-13.6-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
@@ -3,32 +3,35 @@
 ## 论坛方案
 
 - 原文地址 [where's bsd libc documentation?](https://forums.freebsd.org/threads/wheres-bsd-libc-documentation.63107/)。
-
 - 作者 mrclksr。
 
 原方案已失效。
 
 ## 改进方案
 
-原有方案的问题：
+对原方案的改进：
 
 - `if zgrep -q '.Lb libc' $i && zgrep -q '.Sh LIBRARY' $i; then` 这一句的问题是 `.Lb libc` 匹配的不只是 libc，还有 libcalendar 等以 libc 开头的库。可以写成 `.Lb libc$` 来改正这个问题
 - 正文组织排序并不合理，并不是按功能模块等组合，用于学习并不合适，用于速查倒是可行。
 
-下面提供的方案就是解决上面这两个问题，代码可以保存为脚本文件运行，不过我不建议，里面有两处可以手工调整，建议分步执行。
+---
 
-首先安装依赖：
+首先安装需要的软件包。
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install groff ghostscript10
 ```
 
-或者
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/textproc/groff/ && make install clean
 # cd /usr/ports/print/ghostscript10/ && make install clean
 ```
+
+---
 
 然后执行该脚本：
 
