--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -3,13 +3,15 @@
 
 >**技巧**
 >
->类似 plasma-nm/networkmanager 的图形化网络配置工具：
+>类似 plasma-nm/networkmanager 的图形化网络配置工具。
+>
+>- 使用 pkg 安装：
 >
 >```sh
 >pkg install net-mgmt/networkmgr
 >```
 >
->或者：
+>- 或者使用 Ports 安装：
 >
 >```sh
 ># cd /usr/ports/net-mgmt/networkmgr/ 
