--- a/di-14-zhang-wang-luo-guan-li/di-14.4-yi-tai-wang-ka.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.4-yi-tai-wang-ka.md
@@ -10,7 +10,9 @@
 
 ![Realtek RTL8125 2.5 G](../.gitbook/assets/rtl8125.png)
 
-**该网卡默认在 FreeBSD 下是没有驱动的，需要手动安装。最简单的办法是使用通过手机 USB 共享网络临时上网，方法见本手册其余部分。安装了网卡重启即可。**
+>**技巧**
+>
+>RTL8125 在 FreeBSD 下默认是没有驱动的，需要手动安装。最简单的办法是使用通过手机 USB 共享网络临时上网，方法见本手册其余部分。安装了网卡重启即可。
 
 安装方法同下。
 
@@ -34,7 +36,7 @@
 
 #### 安装方法
 
-
+- 使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/net/realtek-re-kmod/ 
@@ -45,12 +47,13 @@
 >
 >编译安装时，需要有一份源代码在 `/usr/src`。
 
-或者
+- 使用 pkg 安装：
   
 ```
 pkg install realtek-re-kmod
 ```
 
+---
 
 配置：
 
