--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.5-fail2ban.md
@@ -10,7 +10,7 @@
 # pkg install security/py-fail2ban
 ```
 
-- 使用 Ports：
+- - 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/security/py-fail2ban/ 
@@ -23,7 +23,7 @@
 # service fail2ban enable
 ```
 
-## 查看安装后说明
+## 查看 fail2ban 安装后说明
 
 ```sh
 # pkg info -D security/py-fail2ban
