--- a/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
@@ -10,7 +10,7 @@
 
 - 使用 `bsdconfig` 设置时区。
 
-- 或命令行：
+- 使用命令行：
 
 ```sh
 # cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
@@ -50,7 +50,7 @@ server 3.cn.pool.ntp.org
 
 - 启动 ntp 服务
 
-```
+```sh
 # service ntpd start
 ```
 
