--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
@@ -6,14 +6,13 @@
 
 树莓派就是一块基于 ARM 芯片的开发板，即一块接口丰富（HDMI、I²C、USB 2.0/3.0、I²S、CSI、GPIO、串口、RTC、PWM 风扇、DSI、PCIe（需要转接）、POE 模块等）的电路板，相当于同期的千元红米手机（高通款），手机能做的事情，树莓派都能做；手机做不了的事，树莓派大都也能做。一般用于嵌入式开发，如机器人，路由器和监控等等。在美剧《黑客军团》（*Mr. Robot*）中，树莓派还充当了渗透工具。当然，上述并非树莓派的初衷——树莓派是英国树莓派基金会的计算机教育产物。
 
+---
 
->据称，树莓派最初的目标是为了拯救面临废系的剑桥大学计算机科学与技术系。
->
->经分析论证，教学主管认为主要原因是现在的小孩子没有便宜且开放的电脑可玩。
->
->~~“为了守护我们最爱的院系——我们所能做的，就是开发一块每个人都买得起的电路板！！”~~
->
->尽管《LoveLive!》以失败告终，但树莓派取得了巨大成功！
+据称，树莓派最初的目标是为了拯救面临废系的剑桥大学计算机科学与技术系。经分析论证，教学主管认为主要原因是现在的小孩子没有便宜且开放的电脑可玩。
+
+~~“为了守护我们最爱的院系——我们所能做的，就是开发一块每个人都买得起的电路板！！”~~
+
+尽管《LoveLive!》以失败告终，但树莓派取得了巨大成功！
 
 
 ### 常见疑问解答
