--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
@@ -1,6 +1,6 @@
 # 第 18.3 节 树莓派 FreeBSD 配置
 
-## ssh 设置
+## SSH 设置
 
 使用 XShell 即可登录树莓派。用户名密码均为 `freebsd`。root 需要登录后输入 `su`，密码为 `root`。
 
@@ -78,18 +78,20 @@ dev.cpu.0.freq_levels: 2000/-1 600/-1
 
 ## htop
 
-安装：
+- 使用 pkg 安装：
 
 ```sh
 # pkg install htop
 ```
 
-或者：
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/sysutils/htop/ 
 # make install clean
 ```
+
+---
 
 持久化设置（**默认的 F10 保存后不能 `ctrl` + `c`，必须点 quit 才能保存设置；** 亦可于文件中指定）：
 
