--- a/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
@@ -8,7 +8,7 @@
 
 从这里不难看出。做的事情只有一个：识别 Linux 系统调用，然后找到对应的 FreeBSD 系统调用实现。把原 Linux syscall 请求劫持到 FreeBSD syscall 的入口上面去。
 
-## 什么是 Linuxulator
+## 何为 Linuxulator
 
 既然要谈 FreeBSD 兼容 Linux 应用程序，那么一切都要从 Linuxluator 开始说起。Linuxulator 的含义是 Linux Emulator——很容易让人联想到这是 Linux 模拟器。然而 Linuxulator 并不是传统意义上的模拟器，其本身甚至都不是具有单独可执行文件的 FreeBSD 应用程序。Linuxulator 只是 FreeBSD 官方文档中对一个 FreeBSD 内核模块的通俗称呼，这个内核模块的本名叫 `linux`。
 
