--- a/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
@@ -7,9 +7,7 @@ root@ykla:/compat/linux # cat etc/redhat-release
 Rocky Linux release 9.4 (Blue Onyx)
 ```
 
-## 安装基本系统
-
-先加载 Linux 模块：
+## 加载 Linux 模块
 
 ```sh
 # sysrc linux_enable="YES"
@@ -18,20 +16,22 @@ Rocky Linux release 9.4 (Blue Onyx)
 # service linux start
 ```
 
-安装基本系统：
+## 安装基本系统
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install linux-rl9
 ```
 
-或
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/emulators/linux-rl9/ 
 # make install clean
 ```
 
-配置服务：
+## 配置服务
 
 ```sh
 # service dbus enable #一般桌面已经配置
@@ -41,9 +41,5 @@ Rocky Linux release 9.4 (Blue Onyx)
 
 无需配置 `fstab`，`linux_mounts_enable` 会自动运行。
 
-重启：
-
-```sh
-# reboot
-```
+重启后生效。
 
