--- a/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
@@ -2,7 +2,7 @@
 
 ## Linux 兼容层的声音
 
-**目前 Chroot 的 Linux 兼容层内部中没有声音，要想有声音必须在 FreeBSD 中直接运行 Linux 程序，而非 chroot**
+目前 Chroot 的 Linux 兼容层内部中如果没有声音，你可能需要在 FreeBSD 中直接运行 Linux 程序，而非 chroot。
 
 Ubuntu 兼容层：
 
@@ -57,7 +57,7 @@ pcm.!default pcm.sysdefault
 
 - QQ.desktop 内容（以 Ubuntu 兼容层为例）：
 
-```shell
+```ini
 [Desktop Entry]
 Name=QQ
 Exec=/compat/ubuntu/opt/QQ/qq --no-sandbox --in-process-gpu %U
@@ -72,7 +72,7 @@ MimeType=x-scheme-handler/tencent;
 
 - Chrome.desktop 内容（以 Ubuntu 兼容层为例）：
 
-```
+```ini
 [Desktop Entry]
 Version=1.0
 Type=Application
@@ -131,39 +131,10 @@ export QT_IM_MODULE=fcitx
 
 如果遇到类似 sh: warning: setlocale: LC_ALL: cannot change locale (zh_CN.uTF-8) 这样的错误。以 OpenSUSE 为例，安装 `glibc-lang` 和 `glibc-locale` 这两个包，退出兼容层以后重新进入即可。其他系统可以搜索相似的包，例如 CentOS 兼容层，应该安装 `glibc-locale-source`、`glibc-langpack-zh`。
 
-## sysctl 变量（基于 FreeBSD 14.1）
+## sysctl 变量
 
 ```sh
 # sysctl -a -d  | grep -E "linux|compat.linux"
 ```
 
-列出一些常用的：
-
-|sysctl 变量 | 解释|
-| :--- | :--- |
-| `kern.features.linux64` | 支持 64 位 Linux |
-| `kern.features.linux` | 支持 32 位 Linux |
-| `kern.features.linuxulator_v4l2` | 在 Linux 兼容层中支持 V4L2 ioctl 包装器 |
-| `kern.features.linuxulator_v4l` | 在 Linux 兼容层中支持 V4L ioctl 包装器 |
-| `vfs.nfsd.flexlinuxhack` | 对于 Linux 客户端，绕过 Flex 文件布局错误 |
-| `net.netlink.debug.nl_linux_debug_level` | 调试级别 |
-| `hw.snd.compat_linux_mmap` | Linux mmap 兼容性（-1 = 强制禁用；0 = 自动；1 = 强制启用） |
-| `security.jail.param.linux` | Jail Linux 参数 |
-| `security.jail.param.linux.oss_version` | Jail Linux OSS 版本 |
-| `security.jail.param.linux.osrelease` | Jail Linux 内核 OS 版本 |
-| `security.jail.param.linux.osname` | Jail Linux 内核 OS 名称 |
-| `compat.linux32` | 32 位 Linux 仿真 |
-| `compat.linux32.emulate_i386` |仿真真实的 i386 |
-| `compat.linux` | Linux 仿真 |
-| `compat.linux.use_real_ifnames` | 使用 FreeBSD 接口名称而不是生成 `ethN` 别名 |
-| `compat.linux.emul_path` | Linux 运行时环境路径 |
-| `compat.linux.oss_version` | Linux OSS 版本 |
-| `compat.linux.osrelease` | Linux 内核 OS 版本 |
-| `compat.linux.osname` | Linux 内核 OS 名称 |
-| `compat.linux.setid_allowed` | 允许在 Linux 二进制文件的 execve 上设置 setuid/setgid |
-| `compat.linux.map_sched_prio` | 将调度优先级映射到 Linux 优先级（不符合 POSIX） |
-| `compat.linux.preserve_vstatus` | 保留 VSTATUS termios(4) 标志 |
-| `compat.linux.default_stacksize` | 默认软堆栈大小资源限制，或 -1 表示无限制 |
-| `compat.linux.default_openfiles` | 默认软打开文件资源限制，或 -1 表示无限制 |
-| `compat.linux.debug` | 记录来自 linux(4) 的警告；或 0 表示禁用 |
-
+可以列出常用变量。
