--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -1,10 +1,11 @@
 # 第 21.4 节 Linux 兼容层——基于 ArchLinux bootstrap
 
-> 视频教程：[07-FreeBSD-ArchLinux 兼容层脚本使用说明](https://www.bilibili.com/video/BV1wg4y1w7QV)
+视频教程：[07-FreeBSD-ArchLinux 兼容层脚本使用说明](https://www.bilibili.com/video/BV1wg4y1w7QV)
 
 ## ArchLinux 兼容层
 
-<figure><img src="../.gitbook/assets/Arch.png" alt=""><figcaption></figcaption></figure>
+![KDE 6 界面](./.gitbook/assets/Arch.png)
+
 
 > **注意**
 >
