--- a/di-21-zhang-linux-jian-rong-ceng/di-21.5-jie-linux-jian-rong-ceng-ji-yu-archlinuxpacman.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.5-jie-linux-jian-rong-ceng-ji-yu-archlinuxpacman.md
@@ -1,25 +1,26 @@
 # 第 21.5 节 Linux 兼容层——基于 archlinux-pacman
 
-## 待补充
 
-- 使用 AUR Helper 开启 AUR 包的安装和管理
-- 简要解析一下 FreeBSD Linuxulator 路径翻译过程当中存在的一些 magic
-- 以及我们应该如何利用这一机制来提高生产力
 
 ## Arch Linux 兼容层安装步骤
 
 1. 切换至 latest 源并使用 pkg 命令安装 `archlinux-pacman` 和 `archlinux-keyring` 软件包
 
+- 编辑 `/usr/local/etc/pkg/repos/FreeBSD.conf`，写入：
+
 ```sh
-# ee /usr/local/etc/pkg/repos/FreeBSD.conf
 FreeBSD: { url: "https://mirrors.ustc.edu.cn/freebsd-pkg/${ABI}/latest" }
+```
+
+- 安装相关软件：
+
+```
 # pkg update && pkg install archlinux-pacman archlinux-keyring
 ```
 
 2. 编辑 `/usr/local/etc/pacman.conf` 文件加入 Arch Linux 的软件仓库
 
 ```sh
-# ee /usr/local/etc/pacman.conf
 [core]
 Server = https://mirrors.ustc.edu.cn/archlinux/$repo/os/x86_64
 
@@ -36,9 +37,7 @@ Server = https://mirrors.ustc.edu.cn/archlinux/$repo/os/x86_64
 
 这样做的好处在于你不需要通过手动编辑 FreeBSD 层的 `/etc/fstab` 文件来实现 Linux 文件系统的自动挂载，也不需要配置 `compat.linux.emul_path` 选项
 
-> 即使是在 `/etc/sysctl.conf` 文件里设置了 `compat.linux.emul_path` ，也会因为 `linux` 这个服务的启动时机要早于 `/etc/sysctl.conf` 里面的设置被加载的时机，从而导致重启后各个 Linux 文件系统还是去了 `/compat/linux` 目录下。然后必须在系统重启完毕后手动重启 `linux` 服务才能使 `compat.linux.emul_path` 设置生效
->
-> 因此直接做软链接是事实上最简单、有效的
+即使是在 `/etc/sysctl.conf` 文件里设置了 `compat.linux.emul_path` ，也会因为 `linux` 这个服务的启动时机要早于 `/etc/sysctl.conf` 里面的设置被加载的时机，从而导致重启后各个 Linux 文件系统还是去了 `/compat/linux` 目录下。然后必须在系统重启完毕后手动重启 `linux` 服务才能使 `compat.linux.emul_path` 设置生效，因此直接做软链接是事实上最简单、有效的。
 
 4. 更新 pacman 源并安装 Arch Linux 的 C/C++ 运行时库
 
@@ -65,10 +64,9 @@ Server = https://mirrors.ustc.edu.cn/archlinux/$repo/os/x86_64
 
 ## 关于 Arch Linux 兼容层的使用
 
-你可以把上面涉及到的所有绑定操作放到 FreeBSD 层的 `/etc/fstab` 中去
+你可以把上面涉及到的所有绑定操作放到 FreeBSD 层的 `/etc/fstab` 中去，编辑 `/etc/fstab`，加入：
 
 ```sh
-# ee /etc/fstab
 /etc/resolv.conf  /compat/archlinux/etc/resolv.conf  nullfs  ro  0  0
 /etc/passwd       /compat/archlinux/etc/passwd       nullfs  ro  0  0
 /etc/group        /compat/archlinux/etc/group        nullfs  ro  0  0
@@ -89,3 +87,9 @@ Server = https://mirrors.ustc.edu.cn/archlinux/$repo/os/x86_64
 (chroot) # uname -srv
 Linux 4.4.0 FreeBSD 13.2-RELEASE releng/13.2-n254617-525ecfdad597 GENERIC
 ```
+
+## 故障排除与未竟事项
+
+- 使用 AUR Helper 开启 AUR 包的安装和管理
+- 简要解析一下 FreeBSD Linuxulator 路径翻译过程当中存在的一些 magic
+- 以及我们应该如何利用这一机制来提高生产力
