--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.1-jie-ru-he-bao-gao-bug.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.1-jie-ru-he-bao-gao-bug.md
@@ -56,9 +56,10 @@ FreeBSD Bug 报告系统 [https://bugs.freebsd.org/bugzilla/](https://bugs.freeb
 - 记得备份一下报告，万一网不好，没提交上就惨了。
 - 讲礼貌，大家几乎都是拿不到一分钱的志愿者，请多些理解。
 
+
 现在，开始填表了！
 
-注意，你的邮件是公开的，因此可能会收到骚扰，请做好防护或是使用公用邮箱！
+注意，你的邮件是公开的，因此可能会收到骚扰，请做好防护或使用公用邮箱！
 
 - Summary：梗概，简明扼要。
 - Severity：严重程度，只影响我/影响某些人/影响许多人，不要过高评价
