--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.10-jie-tong-guo-ida-7-tiao-shi-freebsd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.10-jie-tong-guo-ida-7-tiao-shi-freebsd.md
@@ -18,13 +18,13 @@
 
 ![](../.gitbook/assets/IDA2.png)
 
-第一个是要调试的文件在虚拟机里的位置。
+第一处是要调试的文件在虚拟机里的位置。
 
-第二个是要调试的文件在虚拟机里的路径。
+第二处是要调试的文件在虚拟机里的路径。
 
 这里 target 就是具体要调试的文件。
 
-第三个是要传递给 main 函数的参数，一般不用写。
+第三处是要传递给 main 函数的参数，一般不用写。
 
 然后是 FreeBSD 系统的主机 ip 地址，监听的端口号和密码（即 SSH 密码，这里是 root 用户，因为 `linux_server64` 文件运行在 root 用户下）。
 
