--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
@@ -33,7 +33,7 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定
 # make install clean # 使用 ports 编译可规避上述问题
 ```
 
-## FreeBSD npm 换源
+## FreeBSD NPM 换源
 
 ```sh
 # npm config set registry https://registry.npmmirror.com
