--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.3-jie-ru-he-can-yu-freebsd-xie-zuo.md
@@ -20,7 +20,7 @@ $ git diff -U999999 origin/main > 2023-1-24.diff # 在分支 B 下执行
 - 示例：
 
 ```sh
-root@generic:~ # git clone https://github.com/ykla/freebsd-ports
+root@generic:~ # git clone https://github.com/ykla/freebsd-ports # 克隆 freebsd-ports 到本地
 you have mail
 Cloning into 'freebsd-ports'...
 remote: Enumerating objects: 6264931, done.
@@ -32,15 +32,15 @@ Resolving deltas: 100% (3615966/3615966), done.
 Checking objects: 100% (16777216/16777216), done.
 Updating files: 100% (161546/161546), done.
 root@generic:~ # cd freebsd-ports/
-root@generic:~/freebsd-ports # git branch -a
+root@generic:~/freebsd-ports # git branch -a # 查看分支
 * main
   remotes/origin/HEAD -> origin/main
   remotes/origin/main
   remotes/origin/rpi-firmware
-root@generic:~/freebsd-ports # git checkout rpi-firmware
+root@generic:~/freebsd-ports # git checkout rpi-firmware # 切换到分支 rpi-firmware，这是我自己 Github 创建的分支
 branch 'rpi-firmware' set up to track 'origin/rpi-firmware'.
 Switched to a new branch 'rpi-firmware'
-root@generic:~/freebsd-ports # git diff -U999999 origin/main > 2024.diff
+root@generic:~/freebsd-ports # git diff -U999999 origin/main > 2024.diff # 生成 diff
 root@generic:~/freebsd-ports # ls -l 2024.diff
 -rw-r--r--  1 root wheel 18021 Oct  6 03:59 2024.diff
 ```
