--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -95,7 +95,7 @@ root@ykla:/ # ls /usr/local/openjdk23/
 ```
 
 
-#### 配置环境变量
+### 配置环境变量
 
 将
 
@@ -225,7 +225,7 @@ public class HelloWorld {
 # make install clean
 ```
 
-#### 查看安装后说明
+### 查看安装后说明
 
 
 ```sh
