--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
@@ -20,7 +20,7 @@
 # pkg install qtcreator qt5-l10n
 ```
 
-## 中文化
+## Qt Creator 中文化
 
 参见 [Bug 236518 - devel/qtcreator unsupported other languages](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=236518)
 
