--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -14,7 +14,7 @@
 # pkg install python311 py311-pip
 ```
 
-- 当然你也可以通过 Ports:
+- 当然你也可以通过 Ports 安装:
 
 ```sh
 # cd /usr/ports/lang/python311/ && make install clean
@@ -33,7 +33,7 @@
 # pkg install vscode
 ```
 
-- 或者使用 Ports：
+- 或者使用 Ports安装：
 
 ```sh
 # cd /usr/ports/editors/vscode/ 
