--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -2,13 +2,15 @@
 
 ## Rust
 
-### 安装
+### 安装 Rust
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install rust
 ```
 
-或者：
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/lang/rust/ 
@@ -27,11 +29,7 @@ $ cargo new greeting
 $ cd greeting
 ```
 
-```sh
-$ ee src/main.rs
-```
-
-添加如下文本：
+新建并编辑 `src/main.rs`，添加如下文本：
 
 ```rust
 fn main() {
@@ -44,13 +42,15 @@ fn main() {
 ## Go 语言
 
 
-### 安装
+### 安装 Go
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install go
 ```
 
-或者：
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/lang/go/ 
