--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -1,55 +1,6 @@
 # 第 22.9 节 Shell
 
 
-
-## 配置 csh
-
-csh（C shell，灵感来自 C 语言，语言亦类似，作者是 Bill Joy）是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
-
->**技巧**
->
->csh 与 tsch 的关系
->
->有必要注意的是，FreeBSD 中 csh 就是 tcsh。二者没有区别。你从源代码 <https://github.com/freebsd/freebsd-src/blame/main/bin/csh/Makefile> 就能看出来，同时 man csh 也会被重定向至 tcsh。
-
-
-> **注意**
->
-> [FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
-
-在 `~/.csh.cshrc` 里面加入：
-
-```sh
-alias ls ls –G
-```
-
-并重新登录即可。
-
----
-
-如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？在 `~/.csh.cshrc` 中加入：
-
-```sh
-set filec
-set autolist
-```
-
-刷新环境变量：
-
-```
-# source ~/.cshrc 
-```
-
-### 如何让 csh 像 zsh 那样具有命令错误修正呢
-
-比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
-
-```sh
-set correct = cmd lz/usr/bin tcsh>ls /usr/bin (y|n|e|a)?
-set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
-```
-
-
 ## 切换到 zsh
 
 ### 安装 zsh
@@ -237,4 +188,51 @@ See /usr/local/share/doc/bash-completion/README.md for more information.
 ```bash
 # bash # 将当前 shell 切换到 bash
 # source ~/.bash_profile # 刷新环境变量
+```
+
+## 配置 csh/tcsh
+
+csh（C shell，灵感来自 C 语言，语言亦类似，作者是 Bill Joy）是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
+
+>**技巧**
+>
+>csh 与 tsch 的关系
+>
+>有必要注意的是，FreeBSD 中 csh 就是 tcsh。二者没有区别。你从源代码 <https://github.com/freebsd/freebsd-src/blame/main/bin/csh/Makefile> 就能看出来，同时 man csh 也会被重定向至 tcsh。
+
+
+> **注意**
+>
+> [FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
+
+在 `~/.csh.cshrc` 里面加入：
+
+```sh
+alias ls ls –G
+```
+
+并重新登录即可。
+
+---
+
+如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？在 `~/.csh.cshrc` 中加入：
+
+```sh
+set filec
+set autolist
+```
+
+刷新环境变量：
+
+```
+# source ~/.cshrc 
+```
+
+### 如何让 csh 像 zsh 那样具有命令错误修正呢
+
+比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
+
+```sh
+set correct = cmd lz/usr/bin tcsh>ls /usr/bin (y|n|e|a)?
+set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
 ```
