--- a/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.2-jie-zfs.md
+++ b/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.2-jie-zfs.md
@@ -1,10 +1,6 @@
 # 第 23.2 节 ZFS
 
-## 使用建议
-
-优化见 [ZFSTuningGuide](https://wiki.freebsd.org/ZFSTuningGuide)。
-
-目前几乎开箱即用，无需多余配置。
+目前 ZFS 几乎开箱即用，无需多余配置。
 
 ## ZFS 压缩
 
@@ -79,8 +75,6 @@ zroot/var/log       compressratio  2.90x  -
 zroot/var/mail      compressratio  1.00x  -
 zroot/var/tmp       compressratio  1.00x  -
 ```
-
-
 
 ## ZFS 快照与还原
 
