--- a/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.3-jie-ci-pan-kuo-rong.md
+++ b/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.3-jie-ci-pan-kuo-rong.md
@@ -1,8 +1,5 @@
 # 第 23.3 节 磁盘扩容
 
-
-
-
 >**警告**
 >
 >ZFS 和 UFS 都只能扩大不能缩小！
@@ -23,7 +20,7 @@ root@ykla:~ # gpart show
 
 可以看到，`free` 空闲空间是 10GB。
 
-选择第四分区进行扩容：
+选择对第四分区进行扩容：
 
 ```sh
 root@ykla:~ # gpart resize -i 4 nda0
@@ -103,10 +100,6 @@ root@freebsd:~ # gpart show
 查看系统盘大小只有 5G，显示 `da0` 只有这一个盘。
 
 - 执行扩容命令
-
-
-
-
 
 > **警告**
 >
@@ -202,56 +195,7 @@ root@ykla:~ # gpart show -rp
 - 查看详情：
 
 ```sh
-root@ykla:~ # gpart list mmcsd0
-Geom name: mmcsd0
-modified: false
-state: OK
-fwheads: 255
-fwsectors: 63
-last: 244277207
-first: 40
-entries: 128
-scheme: GPT
-Providers:
-1. Name: mmcsd0p1
-   Mediasize: 272629760 (260M)
-   Sectorsize: 512
-   Stripesize: 512
-   Stripeoffset: 0
-   Mode: r1w1e2
-   efimedia: HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)
-   rawuuid: ea7e17b0-f265-11ef-a633-1002b5860ef9 # 这个是 fstab 中可用的 UUID，是唯一的，下同
-   rawtype: c12a7328-f81f-11d2-ba4b-00a0c93ec93b # 这个是分区类型 GUID，相同类型的文件系统其 ID 也是一样的，下同
-   label: efiboot0
-   length: 272629760
-   offset: 20480
-   type: efi
-   index: 1
-   end: 532519
-   start: 40
-2. Name: mmcsd0p2
-   Mediasize: 124795224064 (116G)
-   Sectorsize: 512
-   Stripesize: 512
-   Stripeoffset: 0
-   Mode: r1w1e1
-   efimedia: HD(2,GPT,ea843e57-f265-11ef-a633-1002b5860ef9,0x82800,0xe873000)
-   rawuuid: ea843e57-f265-11ef-a633-1002b5860ef9
-   rawtype: 516e7cba-6ecf-11d6-8ff8-00022d09712b
-   label: zfs0
-   length: 124795224064
-   offset: 273678336
-   type: freebsd-zfs
-   index: 2
-   end: 244275199
-   start: 534528
-Consumers:
-1. Name: mmcsd0
-   Mediasize: 125069950976 (116G)
-   Sectorsize: 512
-   Stripesize: 512
-   Stripeoffset: 0
-   Mode: r2w2e5
+# gpart list mmcsd0
 ```
 
 ### 参考文献
