--- a/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.6-jie-ext-234-deng-wen-jian-xi-tong.md
+++ b/di-23-zhang-wen-jian-xi-tong-yu-ci-pan-guan-li/di-23.6-jie-ext-234-deng-wen-jian-xi-tong.md
@@ -22,11 +22,13 @@ fusefs-ext2 只是名字叫“ext2”，实际上也支持 ext3、ext 4。
 
 ### 安装 fusefs-ext2
 
+- 使用 pkg 安装：
+
 ```sh
 # pkg install fusefs-ext2
 ```
 
-或者
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/filesystems/ext2/ 
