--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -8,20 +8,20 @@
 
 ### 安装 rpm 工具
 
+- 使用 pkg 安装
+
 ```sh
 # pkg install rpm4
 ```
 
-或者：
+- 或者使用 Ports 安装：
 
 ```
 # cd /usr/ports/archivers/rpm4/ 
 # make install clean
 ```
 
-### 下载安装微信
-
-#### 下载微信
+### 下载微信
 
 官方地址：[微信 Linux 测试版](https://linux.weixin.qq.com/)
 
@@ -29,7 +29,7 @@
 # fetch https://dldir1v6.qq.com/weixin/Universal/Linux/WeChatLinux_x86_64.rpm # 写作本文时链接如此，请自行获取最新链接
 ```
 
-#### 安装微信
+### 安装微信
 
 ```sh
 root@ykla:/ # cd /compat/linux/
@@ -118,7 +118,7 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 $ /compat/linux/opt/wechat/wechat
 ```
 
-#### 软件图标
+### 软件图标
 
 在路径 `~/.local/share/applications` 下新建文本文件 `wechat.desktop`，写入：
 
