--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
@@ -46,67 +46,8 @@ OpenSBI v1.0
         | |
         |_|
 
-Platform Name             : StarFive VisionFive V2
-Platform Features         : medeleg
-Platform HART Count       : 5
-Platform IPI Device       : aclint-mswi
-Platform Timer Device     : aclint-mtimer @ 4000000Hz
-Platform Console Device   : uart8250
-Platform HSM Device       : ---
-Platform Reboot Device    : ---
-Platform Shutdown Device  : ---
-Firmware Base             : 0x40000000
-Firmware Size             : 360 KB
-Runtime SBI Version       : 0.3
+……省略一部分……
 
-Domain0 Name              : root
-Domain0 Boot HART         : 1
-Domain0 HARTs             : 0*,1*,2*,3*,4*
-Domain0 Region00          : 0x0000000002000000-0x000000000200ffff (I)
-Domain0 Region01          : 0x0000000040000000-0x000000004007ffff ()
-Domain0 Region02          : 0x0000000000000000-0xffffffffffffffff (R,W,X)
-Domain0 Next Address      : 0x0000000040200000
-Domain0 Next Arg1         : 0x0000000042200000
-Domain0 Next Mode         : S-mode
-Domain0 SysReset          : yes
-
-Boot HART ID              : 1
-Boot HART Domain          : root
-Boot HART Priv Version    : v1.11
-Boot HART Base ISA        : rv64imafdcbx
-Boot HART ISA Extensions  : none
-Boot HART PMP Count       : 8
-Boot HART PMP Granularity : 4096
-Boot HART PMP Address Bits: 34
-Boot HART MHPM Count      : 2
-Boot HART MIDELEG         : 0x0000000000000222
-Boot HART MEDELEG         : 0x000000000000b109
-
-
-U-Boot 2021.10 (Dec 25 2022 - 20:59:18 +0800), Build: jenkins-github_visionfive2-4
-
-CPU:   rv64imacu
-Model: StarFive VisionFive V2
-DRAM:  4 GiB
-MMC:   sdio0@16010000: 0, sdio1@16020000: 1
-Loading Environment from SPIFlash... SF: Detected gd25lq128 with page size 256 Bytes, erase size 4 KiB, total 16 MiB
-*** Warning - bad CRC, using default environment
-
-StarFive EEPROM format v2
-
---------EEPROM INFO--------
-Vendor : StarFive Technology Co., Ltd.
-Product full SN: VF7110B1-2310-D004E000-00001875
-data version: 0x2
-PCB revision: 0xb2
-BOM revision: A
-Ethernet MAC0 address: 6c:cf:39:00:53:14
-Ethernet MAC1 address: 6c:cf:39:00:53:15
---------EEPROM INFO--------
-
-In:    serial@10000000
-Out:   serial@10000000
-Err:   serial@10000000
 Model: StarFive VisionFive V2
 Net:   eth0: ethernet@16030000, eth1: ethernet@16040000
 switch to partitions #0, OK
@@ -128,11 +69,11 @@ StarFive #  # 已经进入 opensbi
 在 opensbi 中：
 
 ```sh
-StarFive # dhcp
-StarFive # setenv serverip 192.168.1.169 # 192.168.1.169 仅作示例，这里需要填你 tftp 服务器真实的 IP 地址
-StarFive # tftpboot ${fdt_addr_r} jh7110-starfive-visionfive-2-v1.3b.dtb
-StarFive # load mmc 1:1 ${kernel_addr_r} efi/boot/bootriscv64.efi
-StarFive # bootefi ${kernel_addr_r} ${fdt_addr_r}  # 输入完成后自动引导 OpenBSD 的 uboot，OpenBSD 开机
+# dhcp
+# setenv serverip 192.168.1.169 # 192.168.1.169 仅作示例，这里需要填你 tftp 服务器真实的 IP 地址
+# tftpboot ${fdt_addr_r} jh7110-starfive-visionfive-2-v1.3b.dtb
+# load mmc 1:1 ${kernel_addr_r} efi/boot/bootriscv64.efi
+# bootefi ${kernel_addr_r} ${fdt_addr_r}  # 输入完成后自动引导 OpenBSD 的 uboot，OpenBSD 开机
 ```
 
 该镜像从内存启动，可覆盖安装。进入 OpenBSD 正常的安装过程，关于安装问题请见其他章节。
