--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -8,7 +8,7 @@
 
 以下教程在 14.2-RELEASE 测试通过。类似的方法可以构建 Debian 兼容层。更多其他系统请看 `/usr/local/share/debootstrap/scripts/`。
 
-### 开始构建（基于 Ubuntu 22.04 LTS）
+### 开始构建 Ubuntu 兼容层（基于 Ubuntu 22.04 LTS）
 
 ```sh
 # sysrc linux_enable="YES"
@@ -24,13 +24,13 @@
 # debootstrap jammy /compat/ubuntu http://mirrors.ustc.edu.cn/ubuntu/
 ```
 
-#### 挂载文件系统
+### 挂载文件系统
 
 将 `nullfs_load="YES"` 写入 `/boot/loader.conf`。
 
 将以下行写入 `/etc/fstab`：
 
-```sh
+```ini
 # Device        Mountpoint              FStype          Options                      Dump    Pass#
 devfs           /compat/ubuntu/dev      devfs           rw,late                      0       0
 tmpfs           /compat/ubuntu/dev/shm  tmpfs           rw,late,size=1g,mode=1777    0       0
@@ -59,7 +59,7 @@ linsysfs        /compat/ubuntu/sys      linsysfs        rw,late                 
 # reboot
 ```
 
-#### 进入 Ubuntu 兼容层
+### 进入 Ubuntu 兼容层
 
 首先 chroot 进去 Ubuntu，移除会报错的软件：
 
@@ -68,7 +68,7 @@ linsysfs        /compat/ubuntu/sys      linsysfs        rw,late                 
 # apt remove rsyslog # 此时已经位于 Ubuntu 兼容层了。
 ```
 
-#### 换源
+### Ubuntu 换源
 
 在卸载 rsyslog 之后，换源，由于 SSL 证书没有更新，所以还不能用 https 源：
 
@@ -97,7 +97,7 @@ deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted unive
 ```
 
 
-### Shell 脚本（基于 Ubuntu 22.04 LTS，FreeBSD 14.2 RELEASE 测试通过）
+## 附录：Ubuntu 兼容层脚本（基于 Ubuntu 22.04 LTS，FreeBSD 14.2 RELEASE 测试通过）
 
 
 脚本内容如下：
@@ -222,7 +222,7 @@ chroot ${rootdir} /bin/bash -c "apt remove rsyslog && apt update && apt upgrade 
 echo "Now you can run '#chroot /compat/ubuntu/ /bin/bash' Into Ubuntu 22.04 LTS"
 ```
 
-## 附：Debian 12（bookworm）（FreeBSD 14.2 RELEASE 测试通过）
+## 附录：Debian 12（bookworm）（FreeBSD 14.2 RELEASE 测试通过）
 
 
 脚本内容如下：
@@ -362,7 +362,7 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookwor
 ```
 
 
-## 安装 Windows 11 字体（可选。自制包，打包同时兼容 debian、低版本 Ubuntu）
+## 附录：安装 Windows 11 字体（可选。自制包，打包同时兼容 debian、低版本 Ubuntu）
 
 ```sh
 # apt install git
@@ -371,7 +371,7 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookwor
 # dpkg -i ttf-ms-win11-*.deb
 ```
 
-## 运行 X11 软件
+## 附录：运行 X11 软件
 
 ```sh
 # xhost +local：#此时处于 FreeBSD 系统！
