--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
@@ -6,7 +6,7 @@
 
 ## 服务器启用 Linux 二进制兼容，并部署 archlinux-bootstrap 镜像
 
-```shell
+```sh
 # service linux enable
 # service linux start
 # fetch -o /tmp https://mirrors.bfsu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst
@@ -17,8 +17,10 @@
 
 ## 服务器配置 pacman 源，并添加 archlinuxcn 仓库
 
-```shell
-cat >/compat/linux/etc/pacman.conf <<EOF
+
+编辑 `/compat/linux/etc/pacman.conf`，写入：
+
+```sh
 [options]
 Architecture = auto
 ParallelDownloads = 5
@@ -34,20 +36,20 @@ SigLevel = Required DatabaseOptional
 [archlinuxcn]
 Server = https://mirrors.cernet.edu.cn/archlinuxcn/\$arch
 SigLevel = Required DatabaseOptional
-EOF
 ```
 
 ## 服务器初始化 Arch Linux 运行时环境
 
-```shell
+```sh
 # chroot /compat/linux pacman-key --init
 # chroot /compat/linux pacman-key --populate
 ```
 
 ## 服务器更新 Arch Linux 运行时环境，并安装 code-server
 
-```shell
-# cp /etc/resolv.conf /compat/linux/etc
+编辑 `/etc/resolv.conf /compat/linux/etc`，写入：
+
+```sh
 # chroot /compat/linux pacman -Syu --noconfirm
 # chroot /compat/linux pacman -S --noconfirm archlinuxcn-keyring
 # chroot /compat/linux pacman -S --noconfirm code-server
@@ -55,7 +57,7 @@ EOF
 
 ## 服务器删除 Arch Linux 运行时环境中的无用目录
 
-```shell
+```sh
 # rm -Rf /compat/linux/home
 # rm -Rf /compat/linux/root
 # rm -Rf /compat/linux/usr/local
@@ -64,7 +66,7 @@ EOF
 
 ## 服务器安装 llvm 与 clangd 插件
 
-```shell
+```sh
 # pkg install -y llvm
 # ln -sf /compat/linux/lib/code-server/bin/code-server /usr/local/bin
 # code-server --install-extension llvm-vs-code-extensions.vscode-clangd
@@ -72,13 +74,13 @@ EOF
 
 ## 服务器通过 daemon 命令启动 code-server
 
-```shell
+```sh
 # daemon -p /root/.code-server.pid -f code-server --auth=none
 ```
 
 ## 客户端通过 SSH 建立隧道并通过浏览器连接到 code-server 服务器
 
-```shell
+```sh
 # ssh -L 8080:127.0.0.1:8080 -N root@server
 ```
 
@@ -86,13 +88,13 @@ EOF
 
 ## （示例）浏览器中用 code-server 打开 FreeBSD 的源码树
 
-```shell
+```sh
 # code-server /usr/src
 ```
 
 ## （示例）浏览器中编译最小化内核并生成 `compile_commands.json` 文件
 
-```shell
+```sh
 # pkg install  bear
 # bear --append -- make KERNCONF=MINIMAL buildkernel
 ```
@@ -103,7 +105,7 @@ EOF
 
 为了便于读者快速获得开发环境，我们将安装 code-server 的步骤整理成一个脚本：
 
-```shell
+```sh
 #!/bin/sh
 
 set -e
