--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.2-jie-ru-he-ti-jiao-yi-ge-ruan-jian-bao.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.2-jie-ru-he-ti-jiao-yi-ge-ruan-jian-bao.md
@@ -1,10 +1,6 @@
 # 第 22.2 节 如何开发一个 Port
 
-建议阅读 [FreeBSD Porter's Handbook](https://docs.freebsd.org/en/books/porters-handbook/)。
-
-> **注意**
->
-> 我们正在尽力翻译该文档，如果你愿意参加，请点击 [https://github.com/FreeBSD-Ask/porter-handbook](https://github.com/FreeBSD-Ask/porter-handbook)。
+建议阅读《FreeBSD Port 开发者手册》
 
 FreeBSD 的软件是以 port 提供的，开发者不需要考虑如何打包成二进制软件包等问题，port 里面也不包含软件的源代码，类似于 Gentoo（Gentoo 的 portage 脱胎于 ports)，所以理论上移植难度并不是很高。
 
