--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
@@ -4,7 +4,11 @@
 
 我们常见的 Android 安卓手机、最新款的 Apple MacBook、电视机顶盒处理器均基于 ARM 芯片。
 
-树莓派就是一块基于 ARM 芯片的开发板，即一块接口丰富（HDMI、I²C、USB 2.0/3.0、I²S、CSI、GPIO、串口、RTC、PWM 风扇、DSI、PCIe（需要转接）、POE 模块等）的电路板，相当于同期的千元红米手机（高通款），手机能做的事情，树莓派都能做；手机做不了的事，树莓派大都也能做。一般用于嵌入式开发，如机器人，路由器和监控等等。在美剧《黑客军团》（*Mr. Robot*）中，树莓派还充当了渗透工具。当然，上述并非树莓派的初衷——树莓派是英国树莓派基金会的计算机教育产物。
+树莓派就是一块基于 ARM 芯片的开发板，即一块接口丰富（HDMI、I²C、USB 2.0/3.0、I²S、CSI、GPIO、串口、RTC、PWM 风扇、DSI、PCIe（需要转接）、POE 模块等）的电路板，相当于同期的千元红米手机（高通款）。
+
+手机能做的事情，树莓派都能做；手机做不了的事，树莓派大都也能做。一般用于嵌入式开发，如机器人，路由器和监控等等。
+
+在美剧《黑客军团》（*Mr. Robot*）中，树莓派还充当了渗透工具。当然，上述并非树莓派的初衷——树莓派是英国树莓派基金会的计算机教育产物。
 
 ---
 
@@ -15,35 +19,7 @@
 尽管《LoveLive!》以失败告终，但树莓派取得了巨大成功！
 
 
-### 常见疑问解答
-
-- 树莓派 4 以前的型号不如同期千元机，即使是树莓派 5 也仅相当于同代千元机。为什么不直接买二手的高端机？
-
-答：手机确实配置高于树莓派，但是没有可扩展性（典型功能 GPIO）。
-
-- 要可扩展性，为什么不直接买 X86 小主机？
-
-答：首先，受限于散热（功耗墙）、电源供应，与树莓派物理尺寸（信用卡大小）相同的 x86 开发板（如 Raxda x4），其性能并不比树莓派高出多少，发热倒是上去了。其次，讨论比树莓派大的开发板亦没有意义。那不是一个类型的东西。
-
-并且这里提到的可扩展性 X86 也没有。现代 X86，比如英特尔直连引出的总线就仅有 PCIe、USB、SATA 这三种。比如 Raxda x4 就是靠一块树莓派芯片（RP2040）实现的上述功能。
-
-- 为什么不买基于瑞芯微（Rockchip）的 RK 3588/3528/35xx？
-
-不是同类产品。瑞芯微更适合专业的从业者使用。
-
-你提供的是商业产品。故提供驱动程序、在生命周期内，集成到最新主线 LTS Linux 内核、长期维护的在线/离线文档、除开发板外的周边产品（外壳、电源、各种线缆和转接器、扩展板、散热器、天线等）、是你应尽的、且是最基本的义务。
-
-**不要试图将你的任何责任转嫁给用户，即使某些用户自己也拎不清。**
-
-**如果你提供不了任何最基本的技术支持，或者需要用户自行维护 Linux 主线，那么我建议不要做成商业零售产品。**
-
-- 只有瑞芯微和博通可选？
-
-答：还有更为节能的全志（Allwinner）处理器。
-
-## 存储设备的随机读写重要性
-
-### 有必要先测试 U 盘/存储卡的 4K 读写速度
+## 有必要先测试 U 盘/存储卡的 4K 读写速度
 
 测试方法见其他章节。
 
@@ -53,9 +29,9 @@
 
 对于树莓派来说，4K 随机读写速率才是最重要的。测试标准必须至少达到存储卡的 [A2 级别（读 4000 IOPS、写 2000 IOPS）](https://www.kingston.com/cn/blog/personal-storage/microsd-sd-memory-card-naming-conventions)。
 
-### 部分 U 盘的 4K 速写速度可能还不如正常的 A2 存储卡
+## 部分 U 盘的 4K 速写速度可能还不如正常的 A2 存储卡
 
-最离谱的是金士顿 DataTraveler 100 G3 USB 3.0 Flash Drive（即 DT100G3），4K 随机竟然是 `0`，使用这款 U 盘做系统，简直是卡到爆炸。
+最离谱的是金士顿 DataTraveler 100 G3 USB 3.0 Flash Drive（即 DT100G3），4K 随机竟然是 `0`。使用起来也非常卡慢。
 
 ![金士顿 DataTraveler 100 G3 USB 3.0 Flash Drive（即 DT100G3）速写速度测试](../.gitbook/assets/1011.png)
 
