--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
@@ -17,7 +17,7 @@
 - 通过串口线与 StarFive VisionFive 2 交互的计算机
 - 一台 tftp 服务器（可以是虚拟机，搭建方法参考前文的 PDF）
 
-riscv 启动与树莓派不同（树莓派都在那个 EFI 分区中），一般来说需要先通过 opensbi 系统（相当于 Android 手机的 fastboot）将设备树（DTB）、SPI、uboot 刷进开发板的闪存（opensbi 本身也在闪存中，也可以自己升级自己，方法见前面的 PDF），然后才能启动正常的系统。
+riscv 启动与树莓派不同（树莓派都在那个 EFI 分区中），一般来说需要先通过 opensbi 系统（相当于 Android 手机的 fastboot）将设备树（DTB）、SPI、uboot 刷进开发板的闪存（opensbi 本身也在闪存中；也可以自己升级自己，方法见前面的 PDF），然后才能启动正常的系统。
 
 ## 镜像准备
 
@@ -54,12 +54,6 @@ switch to partitions #0, OK
 mmc1 is current device
 found device 1
 bootmode flash device 1
-** Invalid partition 3 **
-Couldn't find partition mmc 1:3
-Can't set block device
-** Invalid partition 3 **
-Couldn't find partition mmc 1:3
-Can't set block device
 Hit any key to stop autoboot:  0  # 在电脑的串口软件上按任意键输入，否则会启动没有准备好的 OpenBSD
 StarFive #  # 已经进入 opensbi
 ```
@@ -70,7 +64,7 @@ StarFive #  # 已经进入 opensbi
 
 ```sh
 # dhcp
-# setenv serverip 192.168.1.169 # 192.168.1.169 仅作示例，这里需要填你 tftp 服务器真实的 IP 地址
+# setenv serverip 192.168.1.169 # 仅作示例，这里需要填你 tftp 服务器真实的 IP 地址
 # tftpboot ${fdt_addr_r} jh7110-starfive-visionfive-2-v1.3b.dtb
 # load mmc 1:1 ${kernel_addr_r} efi/boot/bootriscv64.efi
 # bootefi ${kernel_addr_r} ${fdt_addr_r}  # 输入完成后自动引导 OpenBSD 的 uboot，OpenBSD 开机
