--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.13-jie-nodejs-xiang-guan.md
@@ -2,7 +2,7 @@
 
 ## 更新基本系统
 
-pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定版本，而这意味着如果你需要在 FreeBSD 上使用 Node.js，你必须留意 FreeBSD 本身的版本，尤其当你的 pkg 配置使用了 latest 源时。
+pkg 安装的二进制 Node.js 依赖 `/lib/libcrypto.so.xxx`，即某个特定版本，而这意味着如果你需要在 FreeBSD 上使用 Node.js，你必须留意 FreeBSD 本身的版本，尤其当你的 pkg 配置使用了 latest 源时。
 
 如果想要在 FreeBSD 上安装 Node.js，请先更新基本系统再安装。
 
