service linux enable

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
@@ -10,7 +10,7 @@ Rocky Linux release 9.4 (Blue Onyx)
 ## 加载 Linux 模块
 
 ```sh
-# sysrc linux_enable="YES"
+# service linux enable
 # sysrc kld_list+="linux linux64"
 # kldload linux64
 # service linux start
@@ -34,8 +34,8 @@ Rocky Linux release 9.4 (Blue Onyx)
 ## 配置服务
 
 ```sh
-# service dbus enable #一般桌面已经配置
-# service dbus start #一般桌面已经配置
+# service dbus enable # 一般桌面已经配置
+# service dbus start # 一般桌面已经配置
 # dbus-uuidgen > /compat/linux/etc/machine-id
 ```
 
