--- a/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
@@ -1,10 +1,10 @@
 # 第 21.10 节 RockyLinux 兼容层（FreeBSD Port）
 
-截止 2024.9.19，Port/软件包 [emulators/linux-rl9](https://www.freshports.org/emulators/linux-rl9/) 基于 RockyLinux 9.4（发布于 2024 年 5 月 9 日）：
+截止 2024.9.19，Port/软件包 [emulators/linux-rl9](https://www.freshports.org/emulators/linux-rl9/) 基于 RockyLinux 9.5（发布于 2024 年 11 月 19 日）：
 
 ```sh
-root@ykla:/compat/linux # cat etc/redhat-release 
-Rocky Linux release 9.4 (Blue Onyx)
+bash-5.1$ cat /etc/redhat-release 
+Rocky Linux release 9.5 (Blue Onyx)
 ```
 
 ## 加载 Linux 模块
