--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.4-jie-yin-dao-jie-mian.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.4-jie-yin-dao-jie-mian.md
@@ -36,7 +36,7 @@ autoboot_delay="2"
 
 ## 屏幕保护
 
-在默认情况下，控制台驱动程序在屏幕空闲时不会做任何特殊处理。如果你预计长时间让显示器保持开启并处于空闲状态，那么您应该启用其中某个屏幕保护程序以防止烧屏。
+在默认情况下，控制台驱动程序在屏幕空闲时不会做任何特殊处理。如果你预计长时间让显示器保持开启并处于空闲状态，那么你应该启用其中某个屏幕保护程序以防止烧屏。
 
 ### `bsdconfig`
 
