--- a/di-13-zhang-freebsd-te-se/di-13.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-13-zhang-freebsd-te-se/di-13.3-jie-bsdinstall-yu-bsdconfig.md
@@ -203,7 +203,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 ### 3 HTTP Direct
 
-请选择最适合您的站点，或者选择其他的以指定不同的选项。 “Main Site”会通过 GeoDNS 将用户引导到最近的项目管理镜像站点（它们提供完整的分发文件且支持 IPv4 和 IPv6）。所有其他站点被称为“社区镜像站”；并非所有列出的站点都提供超过基础分发包的内容。请选择一个站点！
+请选择最适合你的站点，或者选择其他的以指定不同的选项。 “Main Site”会通过 GeoDNS 将用户引导到最近的项目管理镜像站点（它们提供完整的分发文件且支持 IPv4 和 IPv6）。所有其他站点被称为“社区镜像站”；并非所有列出的站点都提供超过基础分发包的内容。请选择一个站点！
 
 ```sh
 ┌-------------┤Please select a FreeBSD HTTP distribution site├-------------┐
@@ -494,7 +494,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## 9 Mous 鼠标
 
 你可以运行 mouse 鼠标守护进程来在文本控制台中进行剪切和粘贴。指定一个端口和鼠标的协议类型，然后启用 mouse 鼠标守护进程。如果你不想使用此功能，可以选择 6 来禁用守护进程。  
-启用鼠标守护进程后，您可以在运行 X 配置工具时将 `/dev/sysmouse` 作为鼠标设备，并将 `SysMouse` 或 `MouseSystems` 作为鼠标协议（参见配置菜单）。
+启用鼠标守护进程后，你可以在运行 X 配置工具时将 `/dev/sysmouse` 作为鼠标设备，并将 `SysMouse` 或 `MouseSystems` 作为鼠标协议（参见配置菜单）。
 
 ```sh
 ┌----------------------┤Please configure your mouse├---------------------┐
