--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -58,7 +58,7 @@ PassivePortRange 30000 50000
 
 # 允许认证用户登录的最小 UID。
 # 例如，值为 100 会阻止所有 UID 小于 100 的用户登录。
-# 如果您希望 root 能够登录，请使用 0。
+# 如果你希望 root 能够登录，请使用 0。
 
 MinUID 2000
 
