--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.1-jie-apache.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.1-jie-apache.md
@@ -28,8 +28,8 @@ Your hostname must be resolvable using at least 1 mechanism in
 /etc/nsswitch.conf typically DNS or /etc/hosts or apache might
 have issues starting depending on the modules you are using.
 
-# 您的主机名必须能够通过 /etc/nsswitch.conf 中的至少一种机制解析，通常是 DNS 或 /etc/hosts。
-# 否则，Apache 可能在启动时会遇到问题，具体取决于您使用的模块。
+# 你的主机名必须能够通过 /etc/nsswitch.conf 中的至少一种机制解析，通常是 DNS 或 /etc/hosts。
+# 否则，Apache 可能在启动时会遇到问题，具体取决于你使用的模块。
 
 - apache24 default build changed from static MPM to modular MPM
 - more modules are now enabled per default in the port
@@ -57,7 +57,7 @@ The default database format was changed from BerkeleyDB 5
 
 You must rebuild all your (RewriteMap) databases once after
 upgrading from 2.4.62 to 2.4.62_1 or later.
-# 升级后，您必须重新构建所有的 (RewriteMap) 数据库，特别是在从 2.4.62 升级到 2.4.62_1 或更高版本之后。
+# 升级后，你必须重新构建所有的 (RewriteMap) 数据库，特别是在从 2.4.62 升级到 2.4.62_1 或更高版本之后。
 ```
 
 ## 启动服务
