--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -245,7 +245,7 @@ entry Help -> Edit Custom Properties...
 
 ---
 
-系统默认启用了基于 kqueue 的内置（更快的）文件监视支持。若您监视大型目录结构时出现了问题，可以通过菜单路径 `Help`（帮助） -> `Edit Custom Properties...`（编辑自定义属性……）添加以下属性来禁用该功能：
+系统默认启用了基于 kqueue 的内置（更快的）文件监视支持。若你监视大型目录结构时出现了问题，可以通过菜单路径 `Help`（帮助） -> `Edit Custom Properties...`（编辑自定义属性……）添加以下属性来禁用该功能：
 
 ```ini
   idea.filewatcher.disabled=true
