--- a/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
+++ b/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
@@ -10,7 +10,7 @@ NetBSD 有 Linux 兼容层。
 
 驱动方面自带了 i915 显卡及 AMD 相关驱动，支持 UEFI NVMe。
 
-如果您想捐赠 NetBSD：
+如果你想捐赠 NetBSD：
 
 - 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd> ~~还能刷个 Github 徽章 [Public Sponsor](https://github.com/orgs/community/discussions/19916) 出来~~
 
