--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -613,4 +613,4 @@ root@ykla:~# source pgadmin4/bin/activate.csh
 (pgadmin4) root@ykla:~# pgadmin4
 ```
 
-登录帐号和密码还是原来的 (登陆后再无更新提示，查看版本已是为最新)。
+登录账户和密码还是原来的 (登录后再无更新提示，查看版本已是为最新)。
