--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -410,7 +410,7 @@ echo "process_zombie $num"|curl --data-binary @- http://10.0.55.1:9091/metrics/j
 
 ## 告警
 
-prometheus 告警依赖 alertmanager 组件。这里示例以 jail_exporter 为例（安装配置较为简单，参见上文，不再说明。另需要 `/boot/loader.conf` 中写入 `kern.racct.enable=1`，以开启系统记帐功能）。
+prometheus 告警依赖 alertmanager 组件。这里示例以 jail_exporter 为例（安装配置较为简单，参见上文，不再说明。另需要 `/boot/loader.conf` 中写入 `kern.racct.enable=1`，以开启系统记账功能）。
 
 1. 安装：
 
