--- a/di-19-zhang-wen-xue-gu-shi/di-19.1-jie-freebsd-jian-shi.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.1-jie-freebsd-jian-shi.md
@@ -94,7 +94,8 @@ George Berkeley（1685.3.12—1753.1.14），2023 年是他逝世 270 周年。2
 
 参见《人类知识原理》等著作里是承认且论证过上帝必然存在的。在贝克莱哲学中，物质存在的客观性与上帝存在并不冲突。该著作也回应了各种误解和诘难。
 
-这很好理解：不存在任何独立且不依赖于人的思想与知觉的客观物质（我们所理解的客观物质必然是我们的思想和知觉所能理解的，否则没有意义），如果有，那是不可知的，则等同于不存在，也就没有设定其存在的意义（另外，如果承认物质的不可知性，那将不是纯粹的唯物主义，和贝克莱哲学亦无太大分别）。故，我们认为的流俗的客观存在必定是要靠我们的知觉才能感知，即——存在就是被感知。除此以外的客观存在，是不可知的，也没有意义。所以，贝克莱认为，物质存在依赖于心灵的感知，没有正在被感知却存在着的物质，是不可设想的。但是众所周知，我们的世界是存在的（如果你否认此处，和贝克莱哲学亦无太大分别）。故，为了确保这一点，神是必然存在的。
+这很好理解：不存在任何独立且不依赖于人的思想与知觉的客观物质（我们所理解的客观物质必然是我们的思想和知觉所能理解的，否则没有意义），如果有，那是不可知的，则等同于不存在，也就没有设定其存在的意义（另外，如果承认物质的不可知性，那将不是纯粹的唯物主义，和贝克莱哲学亦无太大分别）。故，我们认为的流俗的客观存在必定是要靠我们的知觉才能感知，即——存在就是被感知。除此以外的客观存在，是不可知的，也没有意义。所以，贝克莱认为，物质存在依赖于心灵的感知，没有正在被感知却存在着的物质，是不可设想的。但是众所周知，我们的世界是存在的（如果你否认此处，和贝克莱哲学亦无太大分别）。故，为了确保这一点，神是必然存在的。我们总是不言自明的暗含地把经过实践的东西肯定为物质性的，这是不对的。如果实践本身的物质性就有问题，那么非物质性的存在如何能赋予这种活动以物质属性（靠松果腺吗）？而这种实践性本身的物质性是无从证明的，因为人类无法认识超越于人类感知以外的存在，除非你借助上帝，但是如此又说明你本身就不存在这种属性了。
+
 
 可以看到当代现象学与贝克莱哲学有异曲同工之妙——他们都强调直接经验和知觉的重要性。
 
