--- a/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
@@ -5,10 +5,7 @@
 
 以 OpenBSD 7.7，AMD 64 位架构为例，访问：<https://cdn.openbsd.org/pub/OpenBSD/7.7/amd64> 获取系统镜像。若是刻录 U 盘安装，就下载 `install77.img` （同时支持 UEFI+BIOS）；若是虚拟机体验，请下载 `install77.iso`。
 
-ISO 镜像亦同时支持 UEFI、BIOS 启动，UEFI 初次加载需要多等几分钟：
-
-![这里会卡上一段时间，请耐心等待](../.gitbook/assets/openbsdload.png)
-
+ISO 镜像亦同时支持 UEFI、BIOS 启动。
 
 >**警告**
 >
