--- a/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
@@ -9,7 +9,7 @@ ISO 镜像亦同时支持 UEFI、BIOS 启动。
 
 >**警告**
 >
->截止 OpenBSD 7.6 时，请勿使用 Ventoy 引导实体机安装。
+>截止 OpenBSD 7.7 时，请勿使用 Ventoy（1.1.05 版本）引导实体机安装，会卡在文件集选择部分。
 
 
 ## 安装过程（UEFI）
