--- a/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
@@ -145,7 +145,7 @@ Select sets by entering a set name, a file name pattern or 'all'. De-select
 sets by prepending a '-', e.g.: '-game*'. Selected sets are labelled `[X]`
 
 [X] bsd       [X] bsd.rd      [X] comp77.tgz   [X] game77.tgz  [X] xshare77.tgz [X] xserv77.tgz
-[x] bsd.mp    [X] base77.tgz  [X] man77.tgz    [X] xbase77.tgz [X] xfont77.tgz
+[X] bsd.mp    [X] base77.tgz  [X] man77.tgz    [X] xbase77.tgz [X] xfont77.tgz
 
 
 Set name(s)? (or 'abort' or 'done') [done] -game*
@@ -161,7 +161,7 @@ Set name(s)? (or 'abort' or 'done') [done] -game*
 Set name(s)? (or 'abort' or 'done') [done] 输入 -game*
 
 [X] bsd       [X] bsd.rd      [X] comp77.tgz   [ ] game77.tgz  [X] xshare77.tgz [X] xserv77.tgz
-[x] bsd.mp    [X] base77.tgz  [X] man77.tgz    [X] xbase77.tgz [X] xfont77.tgz
+[X] bsd.mp    [X] base77.tgz  [X] man77.tgz    [X] xbase77.tgz [X] xfont77.tgz
 
 Set name(s)? (or 'abort' or 'done') [done] 回车
 Directory does not contain SHA256sig. Continue without verification? [no] 请输入 yes，回车
