--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -8,7 +8,7 @@
 
 ### 参考文献
 
-- [resolvconf](https://man.freebsd.org/cgi/man.cgi?query=resolvconf)
+- [resolvconf](https://man.freebsd.org/cgi/man.cgi?query=resolvconf)，man 手册
 
 ### 参考文献
 
