移除来自网络且未经验证的内容 (#391)
* Update di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md

* Update di-9.2-jie-jail-geng-xin.md

* Update di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md

* Update di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md

--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -8,6 +8,7 @@
 
 ### 参考文献
 
+- [resolvconf](https://man.freebsd.org/cgi/man.cgi?query=resolvconf)，man 手册
 - [8.8.8.8 or 1.1.1.1 if set in etc resolv conf doesn't stay as an entry in the file after a network restart](https://forums.freebsd.org/threads/8-8-8-8-or-1-1-1-1-if-set-in-etc-resolv-conf-doesnt-stay-as-an-entry-in-the-file-after-a-network-restart.85951/)
 
 ## `ifconfig`
@@ -111,30 +112,6 @@ ABC_XYZ="ddd"
 
 这种形式，只有第一行会生效，其余 `ABC_XYZ` 配置行不会生效！
 
-## 作为网关服务器
-
-打开 IP 转发功能：
-
-```sh
-# sysrc gateway_enable="YES"
-# sysrc ipv6_gateway_enable="YES"
-```
-
-打开防火墙，开启 NAT：
-
-```sh
-# sysrc firewall_enable="YES"
-# sysrc firewall_script="/etc/ipfw.rules"
-# sysrc firewall_nat_enable="YES"
-```
-
-设置默认接受连接：
-
-编辑 `/boot/loader.conf`，写入：
-
-```sh
-net.inet.ip.fw.default_to_accept=1
-```
 
 ## 查看网卡速率
 
@@ -162,7 +139,3 @@ net.inet.ip.fw.default_to_accept=1
 ```
 
 按字母 `d` 可以切换流量格式。按 `h` 可以查阅更多使用方法。
-
-## 参考文献
-
-- [FreeBSD 入门笔记](https://lvv.me/posts/2021/04/19_freebsd_101/)，作者 lvv.me
