--- a/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
@@ -1,10 +1,5 @@
 # 第 16.4 节 时间服务
 
-时间服务作用：
-
-- 配置时区
-- 同步时间
-
 
 ## 配置时区
 
@@ -15,6 +10,34 @@
 ```sh
 # cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 ```
+
+---
+
+每个用户可以设置自己的时区，在用户的 shell 配置文件中设置 `TZ` 变量即可。
+
+- sh、bash、zsh
+
+```sh
+export TZ=CST-8 
+# 或
+export TZ=Asia/Shanghai
+```
+
+- csh
+
+```sh
+setenv TZ CST-8
+# 或
+setenv TZ "Asia/Shanghai"
+```
+
+- 在 crontab 配置文件中，设置 `CRON_TZ` 变量即可：
+
+```sh
+CRON_TZ=CST-8
+0 8 * * * date >> ~/date.log
+```
+
 
 ## 配置同步时间
 
