--- a/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
@@ -2,14 +2,14 @@
 
 TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 
-- 在有一定丢包率的网络链路上充分利用带宽。
-- 降低网络链路上的 buffer 占用率，从而降低延迟。
+- 充分利用带宽；
+- 降低延迟。
 
-一般来说，如果你使用了代理软件，建议开启 TCP BBR 功能，在速度和稳定性上会有十分显著的作用。在中国大陆该技术通常用于魔法。该项目在 FreeBSD 中，由 Netflix 团队协助开发。最低系统版本支持：*r363032*，也即推荐 FreeBSD 13.0。
+一般来说，如果你使用了代理软件，建议开启 TCP BBR 功能，在速度和稳定性上会有十分显著的作用。在中国大陆该技术通常用于魔法。该项目在 FreeBSD 中，由 Netflix 团队开发。
 
 ## 14.1-RELEASE 及以上版本
 
-无需编译内核。可以直接配置加载。
+无需编译内核，可直接配置加载：
 
 ```sh
 # sysrc kld_list+="tcp_rack tcp_bbr"
@@ -33,7 +33,7 @@ TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 # sysctl net.inet.tcp.functions_default
 ```
 
-如果输出结果为 `net.inet.tcp.functions_default: bbr`，则 TCP BBR 启用成功。
+若输出结果为 `net.inet.tcp.functions_default: bbr`，则 TCP BBR 启用成功。
 
 
 ## 故障排除与未竟事宜
