--- a/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
@@ -1,5 +1,28 @@
 # 第 14.1 节 TCP 堆栈
 
+FreeBSD 实现了多 TCP 栈共存，目前主要开发集中于 RACK 栈（由奈飞开发）和基础栈（4.4BSD 演化而来）。
+
+## 使用 RACK 栈
+
+```
+# echo "net.inet.tcp.functions_default=rack" >> /etc/sysctl.conf # 持久化
+# echo 'tcp_rack_load="YES"' >> /boot/loader.conf # 持久化
+# kldload tcp_rack # 加载内核模块
+# sysctl net.inet.tcp.functions_default=rack # 立即生效
+```
+
+加载内核模块后，可通过如下命令查看所有可用的 TCP 栈：
+
+```sh
+# sysctl net.inet.tcp.functions_available
+net.inet.tcp.functions_available:
+Stack                           D Alias                            PCB count
+freebsd                           freebsd                          3
+rack                            * rack                             0
+```
+
+## TCP BBR
+
 TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 
 - 充分利用带宽；
@@ -7,7 +30,7 @@ TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 
 一般来说，如果你使用了代理软件，建议开启 TCP BBR 功能，在速度和稳定性上会有十分显著的作用。在中国大陆该技术通常用于魔法。该项目在 FreeBSD 中，由 Netflix 团队开发。
 
-## 14.1-RELEASE 及以上版本
+---
 
 无需编译内核，可直接配置加载：
 
