--- a/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
@@ -1,5 +1,7 @@
 # 第 14.1 节 TCP 堆栈
 
+TCP 的实现被称为 TCP 堆栈（一层一层的堆叠，故称“栈”）。
+
 FreeBSD 实现了多 TCP 栈共存，目前主要开发集中于 RACK 栈（由奈飞开发）和基础栈（4.4BSD 演化而来）。
 
 ## 使用 RACK 栈
