--- a/di-12-zhang-yin-dao-yu-hui-fu/12.2-refind.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/12.2-refind.md
@@ -39,6 +39,8 @@
 
 使用 [diskgenius](https://www.diskgenius.com/) 将 `refind` 文件夹复制到 EFI 文件系统下的 efi 文件夹下。
 
+![](../.gitbook/assets/shaung13.png)
+
 ## 添加启动项
 
 使用 [diskgenius](https://www.diskgenius.com/) 创建启动项。
@@ -51,7 +53,11 @@
 
 点击“添加”。选中“refind_x64.efi”。
 
+![](../.gitbook/assets/shaung16.png)
+
 将其移动至顶部，设置为第一启动项。重启后测试效果。
+
+![](../.gitbook/assets/shuang16-2.png)
 
 ![](../.gitbook/assets/shuang17.png)
 
