--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -10,7 +10,7 @@
 
 ![](../.gitbook/assets/zhuzi-3.jpg)
 
-前面两张图都是竹子，第三张图是两棵行道树。
+前面两张图都是竹子，第三张图是若干棵行道树。
 
 亚里士多德认为种子之所以能长成大树，是因为种子暗含着一种潜能，并且在环境满足的情况下，有实现为长成一棵树的可能性。而人的不同就在于人没有固定不变的潜能，这也契合了儒家学说“君子不器”（《论语·为政》）。理解 UNIX 目录与 Windows 目录的异同，对于深入理解操作系统的设计与实现是很重要的。
 
