add 如何理解 UNIX 卸载与挂载

--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -19,3 +19,9 @@
 行道树则不然，每棵普通的行道树都是独立生长的。无论他们靠的多么紧密，他们仍然是独立的。行道树与 Windows 目录类似，都是独立的——`C:\Program Files (x86)\Google\Update`、`D:\BaiduNetdiskDownload\工具列表`、`E:\123\app`：`C`、`D`、`E` 盘都是独立的，互不干扰。你格式化 `D` 盘，并不会影响 `E` 盘存储的文件。甚至，即使你在 PE 中格式化了 `C` 盘（可能不会叫 `C` 盘），也不会影响 `E` 盘中的文件。
 
 事实上 Windows 的“盘符”根本不存在，有经验的装机人员会发现，在 PE 中，`C` 盘会变成其他诸如 `X` 等盘符。正在使用中的 Windows，其盘符也可以随意分配。Windows 下真正判断一个分区是不是 `C` 盘，是靠 GPT 分区类型的 UUID（如我的 C 盘分区类型 UUID 是 `EBD0A0A2-B9E5-4433-87C0-68B6B72699C7` ），而不是靠盘符。盘符是抽象出来的，实际上没有意义。
+
+## 如何理解 UNIX 卸载与挂载
+
+小时候住在花木场的人们都知道，经常需要从树 A 上裁剪一段枝条，将其斜插到树 B 上，并包裹起来，愈合后就成为一体：比如在苹果树（UNIX）上可以长出桃子（挂载 Windows 的 `C` 盘）。这种方法称为“嫁接”。实际上，就是将树 A 的枝条（文件系统）挂载到树 B 上（嫁接点即某个挂载点，归根结底依赖于根目录 `/`）。
+
+而“裁剪下来”则对应于“卸载”。
