--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -18,7 +18,11 @@
 
 行道树则不然，每棵普通的行道树都是独立生长的。无论他们靠的多么紧密，他们仍然是独立的。行道树与 Windows 目录类似，都是独立的——`C:\Program Files (x86)\Google\Update`、`D:\BaiduNetdiskDownload\工具列表`、`E:\123\app`：`C`、`D`、`E` 盘都是独立的，互不干扰。你格式化 `D` 盘，并不会影响 `E` 盘存储的文件。甚至，即使你在 PE 中格式化了 `C` 盘（可能不会叫 `C` 盘），也不会影响 `E` 盘中的文件。
 
-事实上 Windows 的“盘符”根本不存在，有经验的装机人员会发现，在 PE 中，`C` 盘会变成其他诸如 `X` 等盘符。正在使用中的 Windows，其盘符也可以随意分配。Windows 下真正判断一个分区是不是 `C` 盘，是靠 GPT 分区类型的 UUID（如我的 C 盘分区类型 UUID 是 `EBD0A0A2-B9E5-4433-87C0-68B6B72699C7` ），而不是靠盘符。盘符是抽象出来的，实际上没有意义。
+事实上 Windows 的“盘符”根本不存在，有经验的装机人员会发现，在 PE 中，`C` 盘会变成其他诸如 `X` 等盘符。正在使用中的 Windows，其盘符也可以随意分配。Windows 下真正判断一个分区是不是 `C` 盘，是靠 GPT 分区类型的 UUID（如我的 `C` 盘分区类型 UUID 是 `EBD0A0A2-B9E5-4433-87C0-68B6B72699C7` ）以及唯一 ID 来判断的（配置写入 EFI 文件），而不是靠盘符。盘符是抽象出来的，实际上没有意义。这也就是为什么你在其他操作系统上包括 Windows 自己（如双系统）都看不到 `C` 盘的根本原因，因为不存在一个硬编码的，写入文件系统的 `C` 盘标识。只有在真正启动系统时，Windows 才会知道到底谁是 `C` 盘，并写入注册表。至于其他盘符的分配，则完全靠运气，出现 `D` 盘变 `E` 盘的问题也屡见不鲜：因为某虚拟光驱可能在开机时突然插入了等等……
+
+>**思考题**
+>
+>在以往传统的 BIOS + MBR 引导下，Windows 如何识别 `C` 盘？
 
 ## 如何理解 UNIX 卸载与挂载
 
