--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -22,7 +22,7 @@
 
 >**思考题**
 >
->在以往传统的 BIOS + MBR 引导下，Windows 如何识别 `C` 盘？
+>阅读《深入解析 Windows 操作系统 （第7版）（卷2）》（9787115619747，人民邮电出版社）及其他相关文献资料，回答问题：在以往传统的 BIOS + MBR 引导下，Windows 如何识别 `C` 盘？
 
 ## 如何理解 UNIX 卸载与挂载
 
