--- a/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.3-unix.md
@@ -26,6 +26,8 @@
 
 ## 如何理解 UNIX 卸载与挂载
 
+![](../.gitbook/assets/jiajie.png)
+
 小时候住在花木场的人们都知道，经常需要从树 A 上裁剪一段枝条，将其斜插到树 B 上，并包裹起来，愈合后就成为一体：比如在苹果树（UNIX）上可以长出桃子（挂载 Windows 的 `C` 盘）。这种方法称为“嫁接”。实际上，就是将树 A 的枝条（文件系统）挂载到树 B 上（嫁接点即某个挂载点，归根结底依赖于根目录 `/`）。
 
 而对园艺有所了解的人们想必对“扦插”这种培育植物的方法并不陌生：把一棵树新发的侧枝掰下来，插到土里。精心照料一段时间，就会得到一株新的幼苗。实际上，这和“卸载”的原理有异曲同工之妙：将某文件系统（如 `/mnt/test`）从完整的根（`/`）上“掰”（卸载）下来。
