update to llvm20

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
@@ -1,28 +1,33 @@
 # 第 22.4 节 C/C++ 环境的配置
 
-## 在 vim 下的配置
 
-### 配置 C/C++ 环境
+## 配置 C/C++ 环境
 
 下面的内容中需要使用到 llvm 的组件，其中：
 
-FreeBSD 自带 clang 编译器，但并不含 llvm 中其它组件如 clangd（语言服务器，用于代码补全，编译错误，定义跳转等），clang-format（用于格式化语言代码）。所以要安装 llvm，这里各版本的 llvm 都可用，不过至少不应比系统自带的 clang 版本低，在 FreeBSD 13.1 中 clang 版本为 13。下文使用 llvm15，安装后对应的 程序名为 clang15 clang++15 clangd15 clang-format15。而系统自带的 clang，程序名为 clang。如果使用不同版本请注意对照。
+FreeBSD 自带 Clang 编译器，但并不含 llvm 中其它组件，如 clangd（语言服务器，用于代码补全，编译错误，定义跳转等）、Clang-Tidy（代码风格诊断器）clang-format（用于格式化语言代码）。
+
+所以要安装 llvm，这里各版本的 llvm 都可用，不过至少不应比系统自带的 clang 版本低，在 FreeBSD 14.2 中 clang 版本为 18。
+
+下文使用 llvm20，安装后对应的程序名为 clang20、clang++20、clangd20、clang-format20。而系统自带的 clang，程序名为 `clang`。若使用不同版本请注意对照。
 
 ---
 
 - 使用 pkg 安装：
 
 ```sh
-# pkg install llvm15 cmake git
+# pkg install llvm20 cmake git
 ```
 
 - 或者使用 Ports 安装：
 
 ```
-# cd /usr/ports/devel/llvm15/ && make install clean
+# cd /usr/ports/devel/llvm20/ && make install clean
 # cd /usr/ports/devel/cmake/ && make install clean
 # cd /usr/ports/devel/git/ && make install clean
 ```
+
+## 配置 vim
 
 ### 安装 vim 及插件管理器
 
